objects/COVID_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Acid_Reflux__c</fullName>
        <description>Acid Reflux</description>
        <label>C19_v1.0.30</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_currently_experiencing__c</fullName>
        <description>Are you currently experiencing any longer term COVID-19 symptoms (lasting longer than 1 month)?</description>
        <label>C19_v1.0.9</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_currently_participating__c</fullName>
        <description>Have you, or are you currently, participating in any COVID-19 vaccine trials? These would be official tests of new COVID-19 vaccines that would require at least one - and likely several - visits to a medical center to receive injections or nasal sprays to test new approaches to vaccinate against COVID-19.</description>
        <label>C19_v1.0.34</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asthma__c</fullName>
        <description>Asthma</description>
        <label>C19_v1.0.17</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_any_time_in_the_hospital_were_you__c</fullName>
        <description>At any time in the hospital, were you given supplemental oxygen?</description>
        <label>C19_v1.0.8</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COPD__c</fullName>
        <description>COPD</description>
        <label>C19_v1.0.18</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancer__c</fullName>
        <description>Cancer</description>
        <label>C19_v1.0.31</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>COVID_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Crohns_Disease__c</fullName>
        <description>Crohn’s Disease</description>
        <label>C19_v1.0.27</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_you_experience_any_flu_like_symptoms__c</fullName>
        <description>Have you experienced any of the following flu-like symptoms since COVID-19 began?</description>
        <label>C19_v1.0.11</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_you_receive_a_COVID_19_vaccine__c</fullName>
        <description>Did you receive a COVID-19 vaccine?</description>
        <label>C19_v1.0.35</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_you_receive_a_diagnosis_of_COVID_19__c</fullName>
        <description>Have you ever been diagnosed with or tested positive for COVID-19?</description>
        <label>C19_v1.0.1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_smoke_tobacco__c</fullName>
        <description>Do you currently smoke tobacco?</description>
        <label>C19_v1.0.32</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eczema__c</fullName>
        <description>Eczema</description>
        <label>C19_v1.0.26</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Epilepsy__c</fullName>
        <description>Epilepsy</description>
        <label>C19_v1.0.16</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_how_many_days_were_you_hospitalized__c</fullName>
        <description>For how many days were you hospitalized?</description>
        <label>C19_v1.0.5</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_u_received_a_COVID_19_booster_shot__c</fullName>
        <description>Have you received a COVID-19 booster shot?</description>
        <label>C19_v1.0.39</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_been_tested_for_coronavirus__c</fullName>
        <description>Have you been tested for coronavirus antibodies? This typically requires a blood test.	Have you been tested for coronavirus antibodies? This typically requires a blood test.</description>
        <label>C19_v1.0.12</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_smoked_tobacco__c</fullName>
        <description>Have you ever smoked tobacco?</description>
        <label>C19_v1.0.33</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heart_Disease__c</fullName>
        <description>Heart Disease</description>
        <label>C19_v1.0.14</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_blood_pressure__c</fullName>
        <description>High blood pressure</description>
        <label>C19_v1.0.13</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lupus__c</fullName>
        <description>Lupus</description>
        <label>C19_v1.0.24</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Sclerosis__c</fullName>
        <description>Multiple Sclerosis</description>
        <label>C19_v1.0.22</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_lung_disease__c</fullName>
        <description>Other lung disease</description>
        <label>C19_v1.0.19</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_check_all_that_apply__c</fullName>
        <description>Please check all that apply.</description>
        <label>C19_v1.0.10</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_select_the_symptoms__c</fullName>
        <description>Please select the symptoms that you experienced with COVID-19. Select all that apply.</description>
        <label>C19_v1.0.3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Psoriasis__c</fullName>
        <description>Psoriasis</description>
        <label>C19_v1.0.25</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rheumatoid_arthritis__c</fullName>
        <description>Rheumatoid Arthritis</description>
        <label>C19_v1.0.23</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stroke__c</fullName>
        <description>Stroke</description>
        <label>C19_v1.0.15</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_1_Diabetes__c</fullName>
        <description>Type 1 Diabetes</description>
        <label>C19_v1.0.21</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_2_Diabetes__c</fullName>
        <description>Type 2 Diabetes</description>
        <label>C19_v1.0.20</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ulcerative_Colitis__c</fullName>
        <description>Ulcerative Colitis</description>
        <label>C19_v1.0.28</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ulcers__c</fullName>
        <description>Ulcers</description>
        <label>C19_v1.0.29</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Were_you_admitted_to_the_ICU__c</fullName>
        <description>Were you admitted to the ICU?</description>
        <label>C19_v1.0.6</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Were_you_hospitalized_for_COVID_19__c</fullName>
        <description>Were you hospitalized for COVID-19?</description>
        <label>C19_v1.0.4</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Were_you_intubated_and_put_on_a__c</fullName>
        <description>Were you intubated and put on a ventilator (breathing machine)?</description>
        <label>C19_v1.0.7</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_date_did_you_receive_your_COVID_19__c</fullName>
        <description>Please specify the month and the year (MM/YYYY) of your three most recent COVID-19 infections.</description>
        <label>C19_v1.0.2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_vaccine_brand_did_you_receive__c</fullName>
        <description>What vaccine brand did you receive? Please select all that apply. We ask about your booster below.</description>
        <label>C19_v1.0.36</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_vaccine_brand_u_receive_for_booster__c</fullName>
        <label>C19_v1.0.40</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_was_the_date_of_your_booster_shoot__c</fullName>
        <description>When was the date of your booster shoot (MM/YYYY))?</description>
        <label>C19_v1.0.41</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_was_the_date_of_your_first_dose__c</fullName>
        <description>When was the date of your first dose (or when is it scheduled(MM/YYYY))?</description>
        <label>C19_v1.0.37</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_was_the_date_of_your_second_dose__c</fullName>
        <description>When was the date of your second dose (or when is it scheduled(DD/MM/YYYY))?</description>
        <label>C19_v1.0.38</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>C19</label>
    <nameField>
        <displayFormat>C19-{0000000000}</displayFormat>
        <label>C19 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C19s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>